# Network-Exp

./: README.md
SocketServer/: CMakeLists.txt  Client.cpp  DataExchange.h  Server.cpp  complile.bat  test.c  test.cpp
WebServer/: README.md  WebServer.exe4j  config.properties  routes.properties
WebServer/src/: Server.java
WebServer/www/public/html/: 404.html  test.html
WebServer/www/public/media/: test.txt
